inputs fixed, add some styles

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=245061865"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4158164025"/>
   <link rel="stylesheet" type="text/css" href="css/index.css?crc=4179082566" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/hubble.css" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
@@ -247,13 +248,13 @@ COPYRIGHT © 2016 MuseShop.net / Skilltech.co / SkilltechWebDesign.com Do not co
            <img class="block" id="u6595_img" src="images/25julio-2021.png?crc=4146583159" data-hidpi-src="images/25julio-2021_2x.png?crc=186911894" alt="" width="151" height="12"/>
           </div>
           <div class="Button animate1 transition museBGSize rounded-corners clearfix grpelem" id="buttonu6645"><!-- container box -->
-           <div class="clearfix grpelem" id="u6646-4"><!-- content -->
-            <p>SYSTEM SERVER</p>
+           <div class="clearfix grpelem btn-form" id="u6646-4"><!-- content -->
+            <a class="no-deco" href="https://www.mediafire.com/file/1j2o7orl7dxzvrk/%2521Interlude_Patch.rar/file" target="_blank">SYSTEM SERVER</a>
            </div>
           </div>
           <div class="Button animate1 transition museBGSize rounded-corners clearfix grpelem" id="buttonu8576"><!-- container box -->
            <div class="clearfix grpelem" id="u8577-4"><!-- content -->
-            <p>CLIENTE SERVER</p>
+            <a class="no-deco" href="https://www.mediafire.com/file/1j2o7orl7dxzvrk/%2521Interlude_Patch.rar/file" target="_blank" > CLIENTE SERVER </a>
            </div>
           </div>
           <div class="Button animate1 rounded-corners transition shadow grpelem" id="buttonu6700"><!-- container box --></div>
@@ -295,46 +296,46 @@ COPYRIGHT © 2016 MuseShop.net / Skilltech.co / SkilltechWebDesign.com Do not co
             <div class="clearfix grpelem" id="u12918-4"><!-- content -->
              <p id="u12918-2">* LOGIN:</p>
             </div>
-            <div class="rounded-corners clearfix grpelem" id="u12900-3"><!-- content -->
+            <input class="rounded-corners clearfix grpelem input-form" id="u12900-3" type="text"><!-- content -->
              <p>&nbsp;</p>
-            </div>
+            </input>
            </div>
            <div class="rgba-background rounded-corners clearfix colelem" id="u12885"><!-- group -->
             <div class="clearfix grpelem" id="u12921-4"><!-- content -->
              <p id="u12921-2">* CONTRASEÑA:</p>
             </div>
-            <div class="rounded-corners clearfix grpelem" id="u12903-3"><!-- content -->
+            <input class="rounded-corners clearfix grpelem input-form" id="u12903-3" type="password"><!-- content -->
              <p>&nbsp;</p>
-            </div>
+            </input>
            </div>
            <div class="rgba-background rounded-corners clearfix colelem" id="u12888"><!-- group -->
             <div class="clearfix grpelem" id="u12924-4"><!-- content -->
              <p id="u12924-2">* REPITA CONTRASEÑA:</p>
             </div>
-            <div class="rounded-corners clearfix grpelem" id="u12906-3"><!-- content -->
+            <input class="rounded-corners clearfix grpelem input-form" id="u12906-3" type="password"><!-- content -->
              <p>&nbsp;</p>
-            </div>
+            </input>
            </div>
            <div class="rgba-background rounded-corners clearfix colelem" id="u12891"><!-- group -->
             <div class="clearfix grpelem" id="u12927-4"><!-- content -->
              <p id="u12927-2">* E-MAIL:</p>
             </div>
-            <div class="rounded-corners clearfix grpelem" id="u12909-3"><!-- content -->
+            <input class="rounded-corners clearfix grpelem input-form" id="u12909-3" type="email"><!-- content -->
              <p>&nbsp;</p>
-            </div>
+            </input>
            </div>
            <div class="rgba-background rounded-corners clearfix colelem" id="u12894"><!-- group -->
             <div class="clearfix grpelem" id="u12930-4"><!-- content -->
              <p id="u12930-2">* REPITA E-MAIL:</p>
             </div>
-            <div class="rounded-corners clearfix grpelem" id="u12912-3"><!-- content -->
+            <input class="rounded-corners clearfix grpelem input-form" id="u12912-3" type="email"><!-- content -->
              <p>&nbsp;</p>
-            </div>
+            </input>
            </div>
            <div class="rgba-background rounded-corners clearfix colelem" id="u12936"><!-- group -->
-            <div class="rounded-corners clearfix grpelem" id="u12939-3"><!-- content -->
+            <input class="rounded-corners clearfix grpelem input-form" id="u12939-3"><!-- content -->
              <p>&nbsp;</p>
-            </div>
+            </input>
            </div>
           </div>
           <div class="clearfix grpelem" id="u13809"><!-- group -->
@@ -345,21 +346,21 @@ COPYRIGHT © 2016 MuseShop.net / Skilltech.co / SkilltechWebDesign.com Do not co
             <div class="clearfix colelem" id="u13773-4"><!-- content -->
              <p id="u13773-2">ID</p>
             </div>
-            <div class="rounded-corners clearfix colelem" id="u13774-3"><!-- content -->
+            <input class="rounded-corners clearfix colelem input-form" id="u13774-3"><!-- content -->
              <p id="u13774">&nbsp;</p>
-            </div>
+            </input>
             <div class="clearfix colelem" id="u13775-4"><!-- content -->
              <p id="u13775-2">PASSWORD</p>
             </div>
-            <div class="rounded-corners clearfix colelem" id="u13776-3"><!-- content -->
+            <input class="rounded-corners clearfix colelem input-form" id="u13776-3" type="password"><!-- content -->
              <p id="u13776">&nbsp;</p>
-            </div>
+            </input>
             <div class="clearfix colelem" id="pu13779"><!-- group -->
              <div class="grpelem" id="u13779"><!-- simple frame --></div>
              <div class="clearfix grpelem" id="u13778-4"><!-- content -->
               <p>Recordar</p>
              </div>
-             <div class="clearfix grpelem" id="u13772-4"><!-- content -->
+             <div class="clearfix grpelem btn-form" id="u13772-4"><!-- content -->
               <p id="u13772-2">LOGIN</p>
              </div>
             </div>
@@ -380,7 +381,7 @@ COPYRIGHT © 2016 MuseShop.net / Skilltech.co / SkilltechWebDesign.com Do not co
            <div class="rounded-corners clearfix colelem" id="u12942-3"><!-- content -->
             <p>&nbsp;</p>
            </div>
-           <div class="rounded-corners clearfix colelem" id="u12957-4"><!-- content -->
+           <div class="rounded-corners clearfix colelem btn-form" id="u12957-4"><!-- content -->
             <p id="u12957-2">REGISTRAR</p>
            </div>
           </div>
@@ -1035,7 +1036,7 @@ $('#defaultCountdown').countdown({until: new Date(2021, 5 - 1, 14 ),format: 'dHM
 });
 </script>	
 <script src="scripts/getTopStat.js" type="text/javascript" ></script>
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js" type="text/javascript" ></script>
 	
    </body>
 </html>
