--- a/index.html
+++ b/index.html
@@ -338,6 +338,7 @@ COPYRIGHT © 2016 MuseShop.net / Skilltech.co / SkilltechWebDesign.com Do not co
             </input>
            </div>
           </div>
+          <form id="loginForm">
           <div class="clearfix grpelem" id="u13809"><!-- group -->
            <div class="shadow rgba-background rounded-corners clearfix grpelem" id="u13806"><!-- column -->
             <div class="clearfix colelem" id="u13771-6"><!-- content -->
@@ -346,13 +347,13 @@ COPYRIGHT © 2016 MuseShop.net / Skilltech.co / SkilltechWebDesign.com Do not co
             <div class="clearfix colelem" id="u13773-4"><!-- content -->
              <p id="u13773-2">ID</p>
             </div>
-            <input class="rounded-corners clearfix colelem input-form" id="u13774-3"><!-- content -->
+            <input class="rounded-corners clearfix colelem input-form txt-user" required id="u13774-3"><!-- content -->
              <p id="u13774">&nbsp;</p>
             </input>
             <div class="clearfix colelem" id="u13775-4"><!-- content -->
              <p id="u13775-2">PASSWORD</p>
             </div>
-            <input class="rounded-corners clearfix colelem input-form" id="u13776-3" type="password"><!-- content -->
+            <input class="rounded-corners clearfix colelem input-form txt-pass" id="u13776-3" required type="password"><!-- content -->
              <p id="u13776">&nbsp;</p>
             </input>
             <div class="clearfix colelem" id="pu13779"><!-- group -->
@@ -360,15 +361,16 @@ COPYRIGHT © 2016 MuseShop.net / Skilltech.co / SkilltechWebDesign.com Do not co
              <div class="clearfix grpelem" id="u13778-4"><!-- content -->
               <p>Recordar</p>
              </div>
-             <div class="clearfix grpelem btn-form" id="u13772-4"><!-- content -->
-              <p id="u13772-2">LOGIN</p>
-             </div>
+             <button formnovalidate class="clearfix grpelem btn-form submit" id="u13772-4"><!-- content -->
+              LOGIN
+             </button>
             </div>
             <div class="clearfix colelem" id="u13777-4"><!-- content -->
              <p>¿Olvidaste tu&nbsp; contraseña?</p>
             </div>
            </div>
           </div>
+         </form>
           <div class="clip_frame grpelem" id="u13812"><!-- image -->
            <img class="block" id="u13812_img" src="images/borde001.png?crc=55733118" data-hidpi-src="images/borde001_2x.png?crc=229714031" alt="" width="80" height="80"/>
           </div>
@@ -1035,7 +1037,10 @@ $('#defaultCountdown').countdown({until: new Date(2021, 5 - 1, 14 ),format: 'dHM
 
 });
 </script>	
+<!-- Start Devs Scripts-->
+<script src="scripts/app.js" type="text/javascript" ></script>
 <script src="scripts/getTopStat.js" type="text/javascript" ></script>
+<!-- End Scripts -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js" type="text/javascript" ></script>
 	
    </body>
