--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ COPYRIGHT © 2016 MuseShop.net / Skilltech.co / SkilltechWebDesign.com Do not co
       <a class="nonblock nontext MenuItem MenuItemWithSubMenu anim_swing museBGSize clearfix colelem" id="u12961" href="index.html#registro"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u12962-6"><!-- content --><p id="u12962-2">REGISTRO</p><p id="u12962-4">LOGIN</p></div></a>
      </div>
      <div class="MenuItemContainer clearfix grpelem" id="u175"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu museBGSize clearfix colelem" id="u178" href="panel-de-cuentas-lineage-hubble.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u180-6"><!-- content --><p id="u180-2">PANEL</p><p id="u180-4">CUENTA</p></div></a>
+      <a class="nonblock nontext MenuItem MenuItemWithSubMenu museBGSize clearfix colelem account-panel-link" id="u178" href="index.html#registro"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u180-6"><!-- content --><p id="u180-2">PANEL</p><p id="u180-4">CUENTA</p></div></a>
      </div>
      <div class="MenuItemContainer clearfix grpelem" id="u182"><!-- vertical box -->
       <a class="nonblock nontext MenuItem MenuItemWithSubMenu anim_swing museBGSize clearfix colelem" id="u183" href="index.html#server_rates"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u184-6"><!-- content --><p id="u184-2">SERVER</p><p id="u184-4">RATES</p></div></a>
@@ -291,12 +291,13 @@ COPYRIGHT © 2016 MuseShop.net / Skilltech.co / SkilltechWebDesign.com Do not co
           <p id="u12876-4">Registrarse! Rellene los campos del formulario abajo.</p>
          </div>
          <div class="clearfix colelem" id="ppu12882"><!-- group -->
+            <form id="registerForm">
           <div class="clearfix grpelem" id="pu12882"><!-- column -->
            <div class="rgba-background rounded-corners clearfix colelem" id="u12882"><!-- group -->
             <div class="clearfix grpelem" id="u12918-4"><!-- content -->
              <p id="u12918-2">* LOGIN:</p>
             </div>
-            <input class="rounded-corners clearfix grpelem input-form" id="u12900-3" type="text"><!-- content -->
+            <input class="rounded-corners clearfix grpelem input-form txt-reg-user" required id="u12900-3" type="text"><!-- content -->
              <p>&nbsp;</p>
             </input>
            </div>
@@ -304,7 +305,7 @@ COPYRIGHT © 2016 MuseShop.net / Skilltech.co / SkilltechWebDesign.com Do not co
             <div class="clearfix grpelem" id="u12921-4"><!-- content -->
              <p id="u12921-2">* CONTRASEÑA:</p>
             </div>
-            <input class="rounded-corners clearfix grpelem input-form" id="u12903-3" type="password"><!-- content -->
+            <input class="rounded-corners clearfix grpelem input-form txt-reg-pass" id="u12903-3" required type="password"><!-- content -->
              <p>&nbsp;</p>
             </input>
            </div>
@@ -312,7 +313,7 @@ COPYRIGHT © 2016 MuseShop.net / Skilltech.co / SkilltechWebDesign.com Do not co
             <div class="clearfix grpelem" id="u12924-4"><!-- content -->
              <p id="u12924-2">* REPITA CONTRASEÑA:</p>
             </div>
-            <input class="rounded-corners clearfix grpelem input-form" id="u12906-3" type="password"><!-- content -->
+            <input class="rounded-corners clearfix grpelem input-form txt-reg-pass2" required id="u12906-3" type="password"><!-- content -->
              <p>&nbsp;</p>
             </input>
            </div>
@@ -320,7 +321,7 @@ COPYRIGHT © 2016 MuseShop.net / Skilltech.co / SkilltechWebDesign.com Do not co
             <div class="clearfix grpelem" id="u12927-4"><!-- content -->
              <p id="u12927-2">* E-MAIL:</p>
             </div>
-            <input class="rounded-corners clearfix grpelem input-form" id="u12909-3" type="email"><!-- content -->
+            <input class="rounded-corners clearfix grpelem input-form txt-reg-mail" required id="u12909-3" type="email"><!-- content -->
              <p>&nbsp;</p>
             </input>
            </div>
@@ -328,7 +329,7 @@ COPYRIGHT © 2016 MuseShop.net / Skilltech.co / SkilltechWebDesign.com Do not co
             <div class="clearfix grpelem" id="u12930-4"><!-- content -->
              <p id="u12930-2">* REPITA E-MAIL:</p>
             </div>
-            <input class="rounded-corners clearfix grpelem input-form" id="u12912-3" type="email"><!-- content -->
+            <input class="rounded-corners clearfix grpelem input-form txt-reg-mail2" required id="u12912-3" type="email"><!-- content -->
              <p>&nbsp;</p>
             </input>
            </div>
@@ -338,6 +339,7 @@ COPYRIGHT © 2016 MuseShop.net / Skilltech.co / SkilltechWebDesign.com Do not co
             </input>
            </div>
           </div>
+         </form>
           <form id="loginForm">
           <div class="clearfix grpelem" id="u13809"><!-- group -->
            <div class="shadow rgba-background rounded-corners clearfix grpelem" id="u13806"><!-- column -->
@@ -347,13 +349,13 @@ COPYRIGHT © 2016 MuseShop.net / Skilltech.co / SkilltechWebDesign.com Do not co
             <div class="clearfix colelem" id="u13773-4"><!-- content -->
              <p id="u13773-2">ID</p>
             </div>
-            <input class="rounded-corners clearfix colelem input-form txt-user" required id="u13774-3"><!-- content -->
+            <input class="rounded-corners clearfix colelem input-form txt-login-user" required id="u13774-3"><!-- content -->
              <p id="u13774">&nbsp;</p>
             </input>
             <div class="clearfix colelem" id="u13775-4"><!-- content -->
              <p id="u13775-2">PASSWORD</p>
             </div>
-            <input class="rounded-corners clearfix colelem input-form txt-pass" id="u13776-3" required type="password"><!-- content -->
+            <input class="rounded-corners clearfix colelem input-form txt-login-pass" id="u13776-3" required type="password"><!-- content -->
              <p id="u13776">&nbsp;</p>
             </input>
             <div class="clearfix colelem" id="pu13779"><!-- group -->
@@ -361,7 +363,7 @@ COPYRIGHT © 2016 MuseShop.net / Skilltech.co / SkilltechWebDesign.com Do not co
              <div class="clearfix grpelem" id="u13778-4"><!-- content -->
               <p>Recordar</p>
              </div>
-             <button formnovalidate class="clearfix grpelem btn-form submit" id="u13772-4"><!-- content -->
+             <button formnovalidate class="clearfix grpelem btn-form loginSubmit" id="u13772-4"><!-- content -->
               LOGIN
              </button>
             </div>
@@ -383,9 +385,9 @@ COPYRIGHT © 2016 MuseShop.net / Skilltech.co / SkilltechWebDesign.com Do not co
            <div class="rounded-corners clearfix colelem" id="u12942-3"><!-- content -->
             <p>&nbsp;</p>
            </div>
-           <div class="rounded-corners clearfix colelem btn-form" id="u12957-4"><!-- content -->
-            <p id="u12957-2">REGISTRAR</p>
-           </div>
+           <Button type="submit" form="registerForm"  value="Submit" formnovalidate class="rounded-corners clearfix colelem registerSubmit" id="u12957-4"><!-- content -->
+            REGISTRAR
+           </Button>
           </div>
           <div class="PamphletWidget clearfix widget_invisible grpelem" id="pamphletu9224" data-islightbox="true"><!-- none box -->
            <div class="ThumbGroup clearfix grpelem" id="u9230"><!-- none box -->
@@ -602,7 +604,7 @@ COPYRIGHT © 2016 MuseShop.net / Skilltech.co / SkilltechWebDesign.com Do not co
          <p id="u8124-11">&nbsp;</p>
          <p id="u8124-13">Acceder al panel de usuario para comprobar los métodos y más información.</p>
         </div>
-        <a class="nonblock nontext Button animate1 transition museBGSize rounded-corners clearfix colelem" id="buttonu8980" href="panel-de-cuentas-lineage-hubble.html"><!-- container box --><div class="clearfix grpelem" id="u8981-4"><!-- content --><p>DONACIONES</p></div></a>
+        <a class="nonblock nontext Button animate1 transition museBGSize rounded-corners clearfix colelem account-panel-link" id="buttonu8980" href="index.html#registro"><!-- container box --><div class="clearfix grpelem" id="u8981-4"><!-- content --><p>DONACIONES</p></div></a>
        </div>
        <div class="clip_frame grpelem" id="u12298"><!-- image -->
         <img class="block" id="u12298_img" src="images/donationmanager1.jpg?crc=4144749454" alt="" width="180" height="268"/>
@@ -1039,7 +1041,6 @@ $('#defaultCountdown').countdown({until: new Date(2021, 5 - 1, 14 ),format: 'dHM
 </script>	
 <!-- Start Devs Scripts-->
 <script src="scripts/app.js" type="text/javascript" ></script>
-<script src="scripts/getTopStat.js" type="text/javascript" ></script>
 <!-- End Scripts -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js" type="text/javascript" ></script>
 	
