--- a/panel-de-cuentas-lineage-hubble.html
+++ b/panel-de-cuentas-lineage-hubble.html
@@ -19,7 +19,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=245061865"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4158164025"/>
   <link rel="stylesheet" type="text/css" href="css/panel-de-cuentas-lineage-hubble.css?crc=188666786" id="pagesheet"/>
+  <!-- Dev Css -->
   <link rel="stylesheet" type="text/css" href="css/panel-hubble.css"/>
+  <!-- End Dev css -->
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
@@ -189,7 +191,33 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        </div>
       </div>
      </div>
-     <div class="shadow grpelem" id="u12348"><!-- simple frame --></div>
+     <div class="shadow grpelem" id="u12348">
+    <!-- Start Control Panel -->
+    <div class="container">
+        <div class="box-info">
+          <h1>User Info</h1>
+          <div class="lines">
+            <div>Username: <span>Developer1</span></div>
+            <div class="two">Email: <span>dev1@gmail.com</span></div>
+            <div>Created in:<span>4/15/2021 21:38:43</span></div>
+            <div class="two">Last login:<span></span></div>
+            <div>Characters:<span></span></div>
+        </div>
+      </div>
+      <div class="box-info">
+        <h1>Last acces to panel</h1>
+        <div class="lines">
+          <div>IP Conected</div>
+          <div class="two"><span></span></div>
+          <div><span></span></div>
+          <div class="two"><span></span></div>
+          <div><span></span></div>
+        </div>
+      </div>
+    </div>
+    
+    <!-- End Control Panel -->
+    </div>
     </div>
    </div>
    <div class="verticalspacer" data-offset-top="1534" data-content-above-spacer="1533" data-content-below-spacer="347"></div>
@@ -274,7 +302,7 @@ Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 }catch(b){if(b&&"function"==typeof b.notify?b.notify():Muse.Assert.fail("Error calling selector function: "+b),false)throw b;}})})};
 
 </script>
-<script src="scripts/app.js" type="text/javascript" ></script>
+<script src="scripts/getTopStat.js" type="text/javascript" ></script>
   <!-- RequireJS script -->
   <script src="scripts/require.js?crc=7928878" type="text/javascript" async data-main="scripts/museconfig.js?crc=4286661555" onload="if (requirejs) requirejs.onError = function(requireType, requireModule) { if (requireType && requireType.toString && requireType.toString().indexOf && 0 <= requireType.toString().indexOf('#scripterror')) window.Muse.assets.check(); }" onerror="window.Muse.assets.check();"></script>
    </body>
