--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <link rel="stylesheet" type="text/css" href="css/index.css?crc=4179082566" id="pagesheet"/>
   <link rel="stylesheet" type="text/css" href="css/hubble.css" id="pagesheet"/>
   <!-- Other scripts -->
+  
+  
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
 </script>
@@ -248,7 +250,7 @@ COPYRIGHT © 2016 MuseShop.net / Skilltech.co / SkilltechWebDesign.com Do not co
            <img class="block" id="u6595_img" src="images/25julio-2021.png?crc=4146583159" data-hidpi-src="images/25julio-2021_2x.png?crc=186911894" alt="" width="151" height="12"/>
           </div>
           <div class="Button animate1 transition museBGSize rounded-corners clearfix grpelem" id="buttonu6645"><!-- container box -->
-           <div class="clearfix grpelem btn-form" id="u6646-4"><!-- content -->
+           <div class="clearfix grpelem" id="u6646-4"><!-- content -->
             <a class="no-deco" href="https://www.mediafire.com/file/1j2o7orl7dxzvrk/%2521Interlude_Patch.rar/file" target="_blank">SYSTEM SERVER</a>
            </div>
           </div>
@@ -257,9 +259,9 @@ COPYRIGHT © 2016 MuseShop.net / Skilltech.co / SkilltechWebDesign.com Do not co
             <a class="no-deco" href="https://www.mediafire.com/file/1j2o7orl7dxzvrk/%2521Interlude_Patch.rar/file" target="_blank" > CLIENTE SERVER </a>
            </div>
           </div>
-          <div class="Button animate1 rounded-corners transition shadow grpelem" id="buttonu6700"><!-- container box --></div>
-          <div class="Button animate1 transition rounded-corners shadow grpelem" id="buttonu6722"><!-- container box --></div>
-          <div class="Button animate1 transition rounded-corners shadow grpelem" id="buttonu6743"><!-- container box --></div>
+          <a href="https://facebook.com" target="_blank"><div class="Button animate1 rounded-corners transition shadow grpelem" id="buttonu6700"><!-- container box --></div></a>
+          <a href="https://www.instagram.com" target="_blank"><div class="Button animate1 transition rounded-corners shadow grpelem" id="buttonu6722"><!-- container box --></div></a>
+          <a href="https://www.youtube.com" target="_blank"><div class="Button animate1 transition rounded-corners shadow grpelem" id="buttonu6743"><!-- container box --></div></a>
           <div class="clip_frame grpelem" id="u12263"><!-- image -->
            <img class="block" id="u12263_img" src="images/logo-hubble550.png?crc=4241927718" alt="" width="540" height="376"/>
           </div>
@@ -791,9 +793,9 @@ COPYRIGHT © 2016 MuseShop.net / Skilltech.co / SkilltechWebDesign.com Do not co
         </div>
        </div>
        <div class="clearfix colelem" id="pbuttonu8086"><!-- group -->
-        <div class="Button rounded-corners transition shadow grpelem" id="buttonu8086"><!-- container box --></div>
-        <div class="Button transition rounded-corners shadow grpelem" id="buttonu8087"><!-- container box --></div>
-        <div class="Button transition rounded-corners shadow grpelem" id="buttonu8088"><!-- container box --></div>
+        <a href="http://facebook.com" target="_blank" rel="noopener noreferrer"><div class="Button rounded-corners transition shadow grpelem" id="buttonu8086"><!-- container box --></div></a>
+        <a href="http://instagram.com" target="_blank" rel="noopener noreferrer"><div class="Button transition rounded-corners shadow grpelem" id="buttonu8087"><!-- container box --></div></a>
+        <a href="http://youtube.com" target="_blank" rel="noopener noreferrer"><div class="Button transition rounded-corners shadow grpelem" id="buttonu8088"><!-- container box --></div></a>
        </div>
        <div class="clearfix colelem" id="pbuttonu8968"><!-- group -->
         <div class="Button animate1 transition museBGSize rounded-corners clearfix grpelem" id="buttonu8968"><!-- container box -->
@@ -818,12 +820,90 @@ COPYRIGHT © 2016 MuseShop.net / Skilltech.co / SkilltechWebDesign.com Do not co
       <div class="clearfix" id="u14680_align_to_page">
        <div class="clearfix grpelem" id="u14699-4"><!-- content -->
         <p>TOP PVP</p>
+        <table class="toplist">
+           <tr>
+              <th>Ranking</th>
+              <th>Nickname</th>
+           </tr>
+           <tr>
+              <td>1.</td>
+              <td>Dev1</td>
+           </tr>
+           <tr>
+              <td>2.</td>
+              <td>Dev2</td>
+           </tr>
+           <tr>
+            <td>3.</td>
+            <td>No data</td>
+         </tr>
+         <tr>
+            <td>4.</td>
+            <td>No data</td>
+         </tr>
+         <tr>
+            <td>5.</td>
+            <td>No data</td>
+         </tr>
+        </table>
        </div>
        <div class="clearfix grpelem" id="u14702-4"><!-- content -->
         <p>TOP CLAN</p>
+        <table class="toplist">
+         <tr>
+            <th>Ranking</th>
+            <th>Clan name</th>
+         </tr>
+         <tr>
+            <td>1.</td>
+            <td>Devs</td>
+         </tr>
+         <tr>
+            <td>2.</td>
+            <td>Random</td>
+         </tr>
+         <tr>
+          <td>3.</td>
+          <td>Random1</td>
+       </tr>
+       <tr>
+          <td>4.</td>
+          <td>No data</td>
+       </tr>
+       <tr>
+          <td>5.</td>
+          <td>No data</td>
+       </tr>
+      </table>
        </div>
        <div class="clearfix grpelem" id="u14705-4"><!-- content -->
         <p>BOSS JEWELS LOC</p>
+        <table class="toplist">
+         <tr>
+            <th>Owner </th>
+            <th>Jewell Boss</th>
+         </tr>
+         <tr>
+            <td>Dev1</td>
+            <td>Valaka's Necklace</td>
+         </tr>
+         <tr>
+            <td>Dev2</td>
+            <td>Baium's Ring</td>
+         </tr>
+         <tr>
+          <td>No data</td>
+          <td>No data</td>
+       </tr>
+       <tr>
+          <td>No data</td>
+          <td>No data</td>
+       </tr>
+       <tr>
+          <td>No data</td>
+          <td>No data</td>
+       </tr>
+      </table>
        </div>
       </div>
      </div>
@@ -1040,7 +1120,10 @@ $('#defaultCountdown').countdown({until: new Date(2021, 5 - 1, 14 ),format: 'dHM
 });
 </script>	
 <!-- Start Devs Scripts-->
+
+<script src="scripts/notify.js" type="text/javascript" ></script>
 <script src="scripts/app.js" type="text/javascript" ></script>
+<script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script>
 <!-- End Scripts -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js" type="text/javascript" ></script>
 	
