added char stats for Select input, added button for logout

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ COPYRIGHT © 2016 MuseShop.net / Skilltech.co / SkilltechWebDesign.com Do not co
       <a class="nonblock nontext MenuItem MenuItemWithSubMenu anim_swing museBGSize clearfix colelem" id="u183" href="index.html#server_rates"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u184-6"><!-- content --><p id="u184-2">SERVER</p><p id="u184-4">RATES</p></div></a>
      </div>
      <div class="MenuItemContainer clearfix grpelem" id="u11816"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu anim_swing museBGSize clearfix colelem" id="u11817" href="index.html#streamer"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u11820-6"><!-- content --><p id="u11820-2">TOUTUBE</p><p id="u11820-4">VIDEO</p></div></a>
+      <a class="nonblock nontext MenuItem MenuItemWithSubMenu anim_swing museBGSize clearfix colelem" id="u11817" href="index.html#streamer"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u11820-6"><!-- content --><p id="u11820-2">YOUTUBE</p><p id="u11820-4">VIDEO</p></div></a>
      </div>
      <div class="MenuItemContainer clearfix grpelem" id="u11795"><!-- vertical box -->
       <a class="nonblock nontext MenuItem MenuItemWithSubMenu anim_swing museBGSize clearfix colelem" id="u11796" href="index.html#donaciones"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u11797-6"><!-- content --><p id="u11797-2">DONACIONES</p><p id="u11797-4">PANEL3</p></div></a>
