--- a/panel-de-cuentas-lineage-hubble.html
+++ b/panel-de-cuentas-lineage-hubble.html
@@ -180,15 +180,13 @@
           </div>
           <div class="clearfix grpelem" id="u12384-4">
             <!-- content -->
-            <p></p>
-          </div>
-          <div class="clearfix grpelem" id="u12387-4">
-            <!-- content -->
-            <p></p>
+            <Button id="logoutSubmit" class="logoutSubmit">
+              Logout 
+            </Button>
           </div>
           <div class="clearfix grpelem" id="u12744-4">
             <!-- content -->
-            <p></p>
+            <p></p>
           </div>
           <div class="clearfix grpelem" id="u12715-5">
             <!-- content -->
@@ -357,35 +355,35 @@
             </div>
             <div class="chars-container">
               <div class="row">
-                <select class="name-character" name="chars">
+                <select id="selectCharacters" class="name-character" name="chars">
                   <option value="Select a character">Select a character</option>
                 </select>
               </div>
               <div class="container">
                 <div class="box">
                   <div class="lines">
-                    <div>Name: <span>nameChar</span></div>
-                    <div class="two">Title: <span>titleChar</span></div>
-                    <div>Created in:<span>createdInChar</span></div>
-                    <div class="two">Online:<span>isOnline</span></div>
-                    <div>Base class:<span>baseClassChar</span></div>
-                    <div class="two">Sub 1:<span>sub1Char</span></div>
-                    <div>Sub 2:<span>sub2Char</span></div>
-                    <div class="two">Sub 3:<span>sub3Char</span></div>
-                    <div>Base level:<span>baseLevelChar</span></div>
+                    <div>Name: <span id="nameChar">nameChar</span></div>
+                    <div class="two">Title: <span id="titleChar">titleChar</span></div>
+                    <div>Created in:<span id="createdInChar">createdInChar</span></div>
+                    <div class="two">Online:<span id="isOnline">isOnline</span></div>
+                    <div>Base class:<span id="baseClassChar">baseClassChar</span></div>
+                    <div class="two">Sub 1:<span id="sub1Char">sub1Char</span></div>
+                    <div>Sub 2:<span id="sub2Char">sub2Char</span></div>
+                    <div class="two">Sub 3:<span id="sub3Char">sub3Char</span></div>
+                    <div>Base level:<span id="baseLevelChar">baseLevelChar</span></div>
                   </div>
                 </div>
                 <div class="box">
                   <div class="lines">
-                    <div class="two">Gender: <span>genderChar</span></div>
-                    <div>PVP:<span>pvpCountChar</span></div>
-                    <div class="two">PK:<span>pkCountChar</span></div>
-                    <div>Karma:<span>karmaCountChar</span></div>
-                    <div class="two">Clan:<span>clanChar</span></div>
-                    <div>Alliance:<span>aliianceChar</span></div>
-                    <div class="two">Noble:<span>isNoble</span></div>
-                    <div>Hero:<span>isHero</span></div>
-                    <div class="two">Online time:<span>onlineTimeCounterChar</span></div>
+                    <div class="two">Gender: <span id="genderChar">genderChar</span></div>
+                    <div>PVP:<span id="pvpCountChar">pvpCountChar</span></div>
+                    <div class="two">PK:<span id="pkCountChar">pkCountChar</span></div>
+                    <div>Karma:<span id="karmaCountChar">karmaCountChar</span></div>
+                    <div class="two">Clan:<span id="clanChar">clanChar</span></div>
+                    <div>Alliance:<span id="aliianceChar">aliianceChar</span></div>
+                    <div class="two">Noble:<span id="isNoble">isNoble</span></div>
+                    <div>Hero:<span id="isHero">isHero</span></div>
+                    <div class="two">Online time:<span id="onlineTimeCounterChar">onlineTimeCounterChar</span></div>
                   </div>
                 </div>
               </div>
