added loader for wait request on server,some validations aditionals

--- a/panel-de-cuentas-lineage-hubble.html
+++ b/panel-de-cuentas-lineage-hubble.html
@@ -19,6 +19,7 @@
   <link rel="shortcut icon" href="images/panel-de-cuentas-lineage-hubble-favicon.ico?crc=385206661" />
   <title>Server Lineage Hubble | Low Rates | Interlude C6</title>
   <!-- CSS -->
+  <link rel="stylesheet" type="text/css" href="css/hubble.css" />
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=245061865" />
   <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4158164025" />
   <link rel="stylesheet" type="text/css" href="css/panel-de-cuentas-lineage-hubble.css?crc=188666786" id="pagesheet" />
@@ -41,8 +42,12 @@
 </head>
 
 <body class="museBGSize">
-
-  <div class="clearfix" id="page">
+  <div class="centered" id="onloader">
+    <div class="loadingio-spinner-eclipse-tifjr2smce"><div class="ldio-wtq1q3lv1er">
+       <div></div>
+       </div></div>
+ </div>
+  <div class="clearfix hidden" id="page">
     <!-- group -->
     <div class="clearfix grpelem" id="pu11066">
       <!-- group -->
