added logout button with funcitonality in index

--- a/panel-de-cuentas-lineage-hubble.html
+++ b/panel-de-cuentas-lineage-hubble.html
@@ -477,6 +477,20 @@
           </div>
           <div id="changeMail" class="option-panel">
             <h1 class="subtitle">CHANGE MAIL PANEL</h1>
+            <div class="box-container">
+              <div class="row">
+                <input placeholder="Actual Mail" type="password">
+              </div>
+              <div class="row">
+                <input placeholder="New email" type="password">
+              </div>
+              <div class="row">
+                <input placeholder="Repeat new email " type="password">
+              </div>
+              <div class="row">
+                <button type="button" class="btn-form"> Change mail </button>
+              </div>
+            </div>
           </div>
           <div id="topPvp" class="option-panel">
             <h1 class="subtitle">TOP PVP LIST PANEL</h1>
