testing recovery password

--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@ COPYRIGHT © 2016 MuseShop.net / Skilltech.co / SkilltechWebDesign.com Do not co
              </button>
             </div>
             <div class="clearfix colelem" id="u13777-4"><!-- content -->
-             <p>¿Olvidaste tu&nbsp; contraseña?</p>
+             <p><a id="recoveryPassordLink">Forgot your&nbsp; password?</a></p>
             </div>
            </div>
           </div>
