--- a/panel-de-cuentas-lineage-hubble.html
+++ b/panel-de-cuentas-lineage-hubble.html
@@ -462,16 +462,16 @@
             <h1 class="subtitle">CHANGE PASSWORD PANEL</h1>
             <div class="box-container">
               <div class="row">
-                <input placeholder="Actual Password" type="password">
+                <input id="txtChangePasswordActual" placeholder="Actual Password" type="password">
               </div>
               <div class="row">
-                <input placeholder="New Password" type="password">
+                <input id="txtChangePasswordNew1" placeholder="New Password" type="password">
               </div>
               <div class="row">
-                <input placeholder="Repeat new Password " type="password">
+                <input id="txtChangePasswordNew2" placeholder="Repeat new Password " type="password">
               </div>
               <div class="row">
-                <button type="button" class="btn-form"> Change password </button>
+                <button type="button" class="btn-form" id="changePasswordSubmit"> Change password </button>
               </div>
             </div>
           </div>
@@ -479,16 +479,16 @@
             <h1 class="subtitle">CHANGE MAIL PANEL</h1>
             <div class="box-container">
               <div class="row">
-                <input placeholder="Actual Mail" type="password">
+                <input id="txtChangeMailActual" placeholder="Actual Mail" type="email">
               </div>
               <div class="row">
-                <input placeholder="New email" type="password">
+                <input id="txtChangeMailNew1" placeholder="New email" type="email">
               </div>
               <div class="row">
-                <input placeholder="Repeat new email " type="password">
+                <input id="txtChangeMailNew2" placeholder="Repeat new email " type="email">
               </div>
               <div class="row">
-                <button type="button" class="btn-form"> Change mail </button>
+                <button type="button" class="btn-form" id="changeMailSubmit"> Change mail </button>
               </div>
             </div>
           </div>
