first try integrate khipu payment

--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@ COPYRIGHT © 2016 MuseShop.net / Skilltech.co / SkilltechWebDesign.com Do not co
           </div>
           <a href="https://facebook.com" target="_blank"><div class="Button animate1 rounded-corners transition shadow grpelem" id="buttonu6700"><!-- container box --></div></a>
           <a href="https://www.instagram.com" target="_blank"><div class="Button animate1 transition rounded-corners shadow grpelem" id="buttonu6722"><!-- container box --></div></a>
-          <a href="https://www.youtube.com" target="_blank"><div class="Button animate1 transition rounded-corners shadow grpelem" id="buttonu6743"><!-- container box --></div></a>
+          <a href="https://www.youtube.com/channel/UC_o7xgLk1wOXnlQydC6SOIw" target="_blank"><div class="Button animate1 transition rounded-corners shadow grpelem" id="buttonu6743"><!-- container box --></div></a>
           <div class="clip_frame grpelem" id="u12263"><!-- image -->
            <img class="block" id="u12263_img" src="images/logo-hubble550.png?crc=4241927718" alt="" width="540" height="376"/>
           </div>
