--- a/panel-de-cuentas-lineage-hubble.html
+++ b/panel-de-cuentas-lineage-hubble.html
@@ -413,14 +413,16 @@
                 </tr>
               </table>
               <div>
-                <select name="" id="amountDonation">
-                  <option value="">800 CLP</option>
-                  <option value="">4000 CLP</option>
-                  <option value="">8000 CLP</option>
-                  <option value="">16000 CLP</option>
-                  <option value="">40000 CLP</option>
+                <select name="" id="selectAmountDonation">
+                  <option value="800">800 CLP</option>
+                  <option value="4000">4000 CLP</option>
+                  <option value="8000">8000 CLP</option>
+                  <option value="16000">16000 CLP</option>
+                  <option value="40000">40000 CLP</option>
                 </select><br>
+                <button class="btnKhipu">
                 <img src="https://s3.amazonaws.com/static.khipu.com/buttons/2021/110x50-purple.png">
+              </button>
               </div>
             </div>
           </div>
